# esg-sustainability-assistant

./: 404.html  README.md  docling-test.py  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: eu-ai-act-application-documentation.md  index.md
eu-ai-act-application-documentation/: index.html
rsc/: cdp.md
search/: search_index.json
src/api/: main.py
src/esg_sustainability_assistant/: main.py
src/esg_sustainability_assistant/crews/data_analysis/: data_analysis.py
src/esg_sustainability_assistant/crews/data_analysis/config/: agents.yaml  tasks.yaml
src/models/: esg_info.py
