[project]
name = "esg-sustainability-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai-tools[mcp]>=0.69.0",
    "crewai[tools]>=0.165.1,<1.0.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
]

[project.scripts]
kickoff = "esg_sustainability_assistant.main:kickoff"
run_crew = "esg_sustainability_assistant.main:kickoff"
plot = "esg_sustainability_assistant.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[dependency-groups]
docs = ["mkdocs-material>=9.6.18", "mkdocstrings-python>=1.18.2"]
